2009-04-21  Zoltan Varga  <vargaz@gmail.com>

	* mini-trampolines.c (mono_generic_class_init_trampoline): Remove
	a racy assert.

	* aot-compiler.c aot-runtime.c: Emit the unwind info into a separate
	table to avoid duplicates.

	* mini.h (MONO_AOT_FILE_VERSION): Bump this.
	
	* aot-compiler.c (emit_method_code): Avoid writing symbols if the nodebug
	option is used.

2009-04-20 Rodrigo Kumpera  <rkumpera@novell.com>

	* mini.c (mini_method_verify): Fail fulltrust code if the exception
	is for method or field access.

2009-04-20  Zoltan Varga  <vargaz@gmail.com>

	* mini-llvm-cpp.cpp (mono_llvm_dump_value): New helper function to print
	a Value to stdout.

	* mini-llvm.c (mono_llvm_emit_method): Use it.
	
	* mini-llvm.c (type_to_llvm_type): Fix the mapping of enums.
	(mono_llvm_emit_method): Add support for CAS. Fix handling of CSET opcodes
	on volatile values.

	* mini-trampolines.c (mono_llvm_vcall_trampoline): Add support for 
	synchronized methods.

	* mini.c (mini_method_compile): Disable LLVM for dynamic methods.

	* mini.c (mini_method_compile): Enable ABCREM when running with LLVM.

	* mini-llvm.c (mono_llvm_emit_method): Add support for OP_LOADI4_MEM/
	OP_LOADI8_MEM.

	* mini-llvm-cpp.cpp (mono_llvm_create_ee): Add a MONO_LLVM env variable
	allowing some options to be set dynamically.

2009-04-19  Zoltan Varga  <vargaz@gmail.com>

	* mini-llvm.c (mono_llvm_emit_method): Handle compares followed by an
	unconditional branch.

	* mini.h (MonoTrampolineType): Add new trampoline type 
	'MONO_TRAMPOLINE_LLVM_VCALL' which handles virtual calls made from LLVM
	compiled code.

	* mini-trampolines.c (mono_llvm_vcall_trampoline): New C trampoline 
	function.

	* mini-trampolines.c (mono_create_llvm_vcall_trampoline): New trampoline
	creation function.

	* mini.c (mini_init): Avoid using the common vtable trampoline when LLVM
	is enabled. Instead, use the llvm vcall trampoline.
	
	* mini-trampolines.c (mono_get_vcall_slot_addr): New helper function.
