@@ -1,3 +1,8 @@
+2009-04-22  Zoltan Varga  <vargaz@gmail.com>
+
+	* method-to-ir.c (mono_method_to_ir): Force init_locals to be TRUE
+	to prevent asserts in various passes. Fixes #497220.
+
 2009-04-21  Zoltan Varga  <vargaz@gmail.com>
 
 	* mini-trampolines.c (mono_generic_class_init_trampoline): Remove
